--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     </head>
     <body>
         <h1>Cupcake store</h1>
+        <!-- <div id="my-ele"></div>
+        <script src="/assets/test.js"></script> -->
     </body>
 </html>
