Adding js snippet

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>Cupcake store</h1>
-        <!-- <div id="my-ele"></div>
-        <script src="/assets/test.js"></script> -->
+        <div id="my-ele"></div>
+        <script src="https://cheerful-gnome-93732c.netlify.app/snippet.js"></script>
     </body>
 </html>
