Adjust locations for snippet to assets

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <body>
         <h1>Cupcake store</h1>
         <div id="my-ele"></div>
-        <script src="https://cheerful-gnome-93732c.netlify.app/snippet.js"></script>
+        <script src="https://cheerful-gnome-93732c.netlify.app/assets/snippet.js"></script>
     </body>
 </html>
